--- a/ai.server/Dockerfile copy
+++ b/ai.server/Dockerfile copy
@@ -1,10 +1,11 @@
 # syntax = docker/dockerfile:1.4
 ARG BUILD_FROM
 
-FROM skrashevich/double-take:1.13.11.9rc2
+FROM ${BUILD_FROM}
 
-ARG S6_OVERLAY_VERSION=3.1.6.2
-ARG BUILD_ARCH=amd64
+ARG S6_OVERLAY_VERSION=3.1.5.0
+ARG TARGETARCH
+ARG BUILD_ARCH=${TARGETARCH}
 RUN \
     apt-get update \
     \
@@ -40,9 +41,9 @@ ADD --link rootfs /
 
 ENV CONFIG_PATH=/data/options.json
 LABEL \
-  io.hass.version="1.13.11.9rc2" \
+  io.hass.version="2.5.1" \
   io.hass.type="addon" \
-  io.hass.arch="aarch64|amd64|armv7"
+  io.hass.arch="aarch64|amd64"
 
 ADD --link https://github.com/hassio-addons/bashio/archive/v0.14.3.tar.gz /tmp/bashio.tar.gz
 RUN mkdir -p /tmp/bashio \
@@ -53,20 +54,9 @@ RUN mkdir -p /tmp/bashio \
     && mv /tmp/bashio/lib /usr/lib/bashio \
     && ln -s /usr/lib/bashio/bashio /usr/bin/bashio
 
-COPY --chmod=755 <<-EOT /run.sh
-#!/usr/bin/with-contenv bashio
+RUN mkdir -p /run/s6/container_environment
 
-export STORAGE_PATH=$(bashio::config 'STORAGE_PATH')
-export CONFIG_PATH=$(bashio::config 'CONFIG_PATH')
-export SECRETS_PATH=$(bashio::config 'SECRETS_PATH')
-export MEDIA_PATH=$(bashio::config 'MEDIA_PATH')
-export IPFILTER=$(cat /data/options.json | jq '.IPFILTER')
-export MQTT_HOST=$(bashio::services mqtt "host")
-export MQTT_USER=$(bashio::services mqtt "username")
-export MQTT_PASSWORD=$(bashio::services mqtt "password")
-
-cd /double-take && /bin/bash ./entrypoint.sh
-EOT
 RUN chmod a+x /run.sh
-WORKDIR /double-take
+WORKDIR /app/server
+ENTRYPOINT []
 CMD [ "/run.sh" ]
