--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -58,7 +58,7 @@ jobs:
   #           echo "No add-on had any monitored files changed (${{ env.MONITORED_FILES }})";
   #         fi
   build:
-    needs: init
+    #needs: init
     runs-on: ubuntu-latest
     #if: needs.init.outputs.changed == 'true'
     name: Build ${{ matrix.arch }} ${{ matrix.addon }} add-on
