--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -65,7 +65,8 @@ jobs:
     strategy:
       matrix:
         addon: ["ai.server"]
-        arch: ["aarch64", "amd64"]
+        #arch: ["aarch64", "amd64"]
+        arch: ["amd64"]
     permissions:
       contents: read
       packages: write
