--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -68,8 +68,7 @@ jobs:
     strategy:
       matrix:
         addon: ["ai.server"]
-        #arch: ["aarch64", "amd64"]
-        arch: ["amd64"]
+        arch: ["aarch64", "amd64"]
     permissions:
       contents: read
       packages: write
