--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,60 +1,58 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-      {
-        "label": "Start Home Assistant",
-        "type": "shell",
-        "command": "supervisor_run",
-        "group": {
-          "kind": "test",
-          "isDefault": true
-        },
-        "presentation": {
-          "reveal": "always",
-          "panel": "new"
-        },
-        "problemMatcher": []
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Start Home Assistant",
+      "type": "shell",
+      "command": "supervisor_run",
+      "group": {
+        "kind": "test",
+        "isDefault": true
       },
-      {
-        "label": "Start Addon",
-        "type": "shell",
-        "command": "ha addons stop \"local_${input:addonName}\"; ha addons start \"local_${input:addonName}\"; docker logs --follow \"addon_local_${input:addonName}\"",
-        "group": {
-          "kind": "test",
-          "isDefault": false
-        },
-        "presentation": {
-          "reveal": "always",
-          "panel": "new"
-        },
-        "problemMatcher": [],
-        "runOptions": {
-          "reevaluateOnRerun": false
-        }
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
       },
-      {
-        "label": "Rebuild and Start Addon",
-        "type": "shell",
-        "command": "ha addons rebuild \"local_${input:addonName}\"; ha addons start \"local_${input:addonName}\"; docker logs --follow \"addon_local_${input:addonName}\"",
-        "group": {
-          "kind": "test",
-          "isDefault": false
-        },
-        "presentation": {
-          "reveal": "always",
-          "panel": "new"
-        },
-        "problemMatcher": []
+      "problemMatcher": []
+    },
+    {
+      "label": "Start Addon",
+      "type": "shell",
+      "command": "ha addons stop \"local_${input:addonName}\"; ha addons start \"local_${input:addonName}\"; docker logs --follow \"addon_local_${input:addonName}\"",
+      "group": {
+        "kind": "test",
+        "isDefault": false
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      },
+      "problemMatcher": [],
+      "runOptions": {
+        "reevaluateOnRerun": false
       }
-    ],
-    "inputs": [
-      {
-        "id": "addonName",
-        "type": "pickString",
-        "description": "Name of addon (to add your addon to this list, please edit .vscode/tasks.json)",
-        "options": [
-          "example",
-        ]
-      }
-    ]
-  }
+    },
+    {
+      "label": "Rebuild and Start Addon",
+      "type": "shell",
+      "command": "ha addons rebuild \"local_${input:addonName}\"; ha addons start \"local_${input:addonName}\"; docker logs --follow \"addon_local_${input:addonName}\"",
+      "group": {
+        "kind": "test",
+        "isDefault": false
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
+      },
+      "problemMatcher": []
+    }
+  ],
+  "inputs": [
+    {
+      "id": "addonName",
+      "type": "pickString",
+      "description": "Name of addon (to add your addon to this list, please edit .vscode/tasks.json)",
+      "options": ["ai.server"]
+    }
+  ]
+}
