--- a/ai.server/build.yaml
+++ b/ai.server/build.yaml
@@ -1,7 +1,10 @@
 ---
 build_from:
-  aarch64: "ghcr.io/stevusprimus/aarch64-base-ubuntu:22.04"
-  amd64: "ghcr.io/stevusprimus/amd64-base-ubuntu:22.04"
+  aarch64: codeproject/ai-server:arm64-2.9.7
+  amd64: codeproject/ai-server:2.9.7
+# build_from:
+#   aarch64: "ghcr.io/stevusprimus/aarch64-base-ubuntu:22.04"
+#   amd64: "ghcr.io/stevusprimus/amd64-base-ubuntu:22.04"
 labels:
   org.opencontainers.image.title: "Home Assistant Add-on: Codeproject.Ai"
   #org.opencontainers.image.description: "Example add-on to use as a blueprint for new add-ons."
@@ -9,4 +12,4 @@ labels:
   org.opencontainers.image.licenses: "Apache License 2.0"
 args:
   TEMPIO_VERSION: "2024.11.2"
-  ARCH_PREFIX_TAG: "${ARCH_PREFIX}"
+  HA_DOCKER_BASE_IMAGE: "ghcr.io/stevusprimus/${BUILD_ARCH}-base-ubuntu:22.04"
