--- a/ai.server/build.yaml
+++ b/ai.server/build.yaml
@@ -1,7 +1,7 @@
 ---
 build_from:
-  aarch64: codeproject/ai-server:arm64-2.9.7
-  amd64: codeproject/ai-server:2.9.7
+  aarch64: ghcr.io/stevusprimus/aarch64-base-ubuntu:22.04
+  amd64: ghcr.io/stevusprimus/amd64-base-ubuntu:22.04
 # build_from:
 #   aarch64: "ghcr.io/stevusprimus/aarch64-base-ubuntu:22.04"
 #   amd64: "ghcr.io/stevusprimus/amd64-base-ubuntu:22.04"
@@ -11,5 +11,9 @@ labels:
   org.opencontainers.image.source: "https://github.com/StevusPrimus/skarashevich-hassio-addons"
   org.opencontainers.image.licenses: "Apache License 2.0"
 args:
-  TEMPIO_VERSION: "2024.11.2"
-  HA_DOCKER_BASE_IMAGE: "ghcr.io/stevusprimus/${BUILD_ARCH}-base-ubuntu:22.04"
+  CPAI_VERSION_AARCH64: "2.9.7"
+  CPAI_VERSION_AMD64: "2.9.5"
+  CPAI_FILE_NAME_AARCH64: "codeproject.ai-server_2.9.7_Ubuntu_arm64"
+  CPAI_FILE_NAME_AMD64: "codeproject.ai-server_2.9.5_Ubuntu_x64"
+  CPAI_INSTALLER_URL_AMD64: "https://codeproject-ai-bunny.b-cdn.net/server/installers/linux/codeproject.ai-server_2.9.5_Ubuntu_x64.zip"
+  CPAI_INSTALLER_URL_AARCH64: "https://codeproject-ai-bunny.b-cdn.net/server/installers/linux/codeproject.ai-server_2.9.7_Ubuntu_arm64.zip"
