--- a/ai.server/Dockerfile
+++ b/ai.server/Dockerfile
@@ -22,13 +22,11 @@ ARG CPAI_INSTALLER_URL_AARCH64 CPAI_INSTALLER_URL_AMD64
 # being Arm64, not x86_64 as assumed.
 FROM ${BUILD_FROM} AS base
 
-RUN \
-        set -x \
-        && if [ "${BUILD_ARCH}" = "aarch64" ]; then \
-                        export INSTALLER_URL=${CPAI_INSTALLER_URL_AARCH64}; \
-                else [ "${BUILD_ARCH}" = "amd64" ]; then \
-                        export INSTALLER_URL=${CPAI_INSTALLER_URL_AMD64}; \
-                fi \
+RUN     if [ "${BUILD_ARCH}" = "aarch64" ]; then \
+                export INSTALLER_URL=${CPAI_INSTALLER_URL_AARCH64}; \
+        else [ "${BUILD_ARCH}" = "amd64" ]; then \
+                export INSTALLER_URL=${CPAI_INSTALLER_URL_AMD64}; \
+        fi 
 
 # Environment vars ------------------------------------------------------------
 
