--- a/ai.server/Dockerfile
+++ b/ai.server/Dockerfile
@@ -23,6 +23,11 @@ ARG CPAI_FILE_NAME_AARCH64 CPAI_FILE_NAME_AMD64
 # being Arm64, not x86_64 as assumed.
 FROM ${BUILD_FROM} AS base
 
+ARG BUILD_FROM BUILD_ARCH
+ARG CPAI_VERSION_AARCH64 CPAI_VERSION_AMD64
+ARG CPAI_INSTALLER_URL_AARCH64 CPAI_INSTALLER_URL_AMD64
+ARG CPAI_FILE_NAME_AARCH64 CPAI_FILE_NAME_AMD64
+
 RUN     if [ "${BUILD_ARCH}" = "aarch64" ]; then \
                 export INSTALLER_URL="${CPAI_INSTALLER_URL_AARCH64}"; \
         elif [ "${BUILD_ARCH}" = "amd64" ]; then \
