--- a/ai.server/Dockerfile
+++ b/ai.server/Dockerfile
@@ -1,8 +1,5 @@
 # syntax = docker/dockerfile:1.4
-ARG BUILD_FROM BUILD_ARCH
-ARG CPAI_VERSION_AARCH64 CPAI_VERSION_AMD64
-ARG CPAI_INSTALLER_URL_AARCH64 CPAI_INSTALLER_URL_AMD64
-ARG CPAI_FILE_NAME_AARCH64 CPAI_FILE_NAME_AMD64
+ARG BUILD_FROM 
 
 
 # CodeProject.AI Server 3.0+
@@ -23,7 +20,7 @@ ARG CPAI_FILE_NAME_AARCH64 CPAI_FILE_NAME_AMD64
 # being Arm64, not x86_64 as assumed.
 FROM ${BUILD_FROM} AS base
 
-ARG BUILD_FROM BUILD_ARCH
+ARG BUILD_ARCH
 ARG CPAI_VERSION_AARCH64 CPAI_VERSION_AMD64
 ARG CPAI_INSTALLER_URL_AARCH64 CPAI_INSTALLER_URL_AMD64
 ARG CPAI_FILE_NAME_AARCH64 CPAI_FILE_NAME_AMD64
@@ -173,6 +170,12 @@ RUN python3.11 -m pip install virtualenv virtualenvwrapper > /dev/null
 
 RUN mkdir -p /install
 WORKDIR /install
+
+ARG BUILD_ARCH
+ARG CPAI_VERSION_AARCH64 CPAI_VERSION_AMD64
+ARG CPAI_INSTALLER_URL_AARCH64 CPAI_INSTALLER_URL_AMD64
+ARG CPAI_FILE_NAME_AARCH64 CPAI_FILE_NAME_AMD64
+
 RUN \
         set -x \
         && if [ "${BUILD_ARCH}" = "aarch64" ]; then \
